--- a/Project_API_React/src/App.css
+++ b/Project_API_React/src/App.css
@@ -109,12 +109,12 @@ button {
   white-space: nowrap;
 }
 
-.button-3:focus:not(:focus-visible):not(.focus-visible) {
+button:focus:not(:focus-visible):not(.focus-visible) {
   box-shadow: none;
   outline: none;
 }
 
-.button-3:hover {
+button:hover {
   background-color: #2c974b;
 }
 
@@ -134,4 +134,39 @@ button:active {
   background-color: #298e46;
   box-shadow: rgba(20, 70, 32, .2) 0 1px 0 inset;
 }
-/* Otros estilos según tus necesidades */
+
+
+/* Estilos para la animación de la televisión antigua */
+.tv-animation {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background: url('../assets/animate.jpg') center/cover no-repeat;
+  animation: tvLoad 2s infinite linear;
+  opacity: 0,3;
+}
+
+@keyframes tvLoad {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.tv-static {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9998;
+  background: url('../assets/static.jpg') center/cover no-repeat;
+}
